# candle-birefnet

./: Cargo.toml  README.md  debug_compare.py  debug_decoder.py  debug_squeeze.py  debug_swin_stages.py
examples/: bench_flash_attn.rs  bench_inference.rs  bench_swin_attn.rs  compare_flash.rs  infer_image.rs  test_birefnet.rs  test_decoder.rs  test_deform_conv.rs  test_flash_bias.rs  test_swin.rs
src/: aspp.rs  birefnet.rs  decoder.rs  deform_conv.rs  lib.rs  swin.rs
