[package]
name = "candle-birefnet"
version = "0.1.0"
edition = "2021"
description = "BiRefNet image segmentation model for candle with Metal GPU support"
license = "MIT"
repository = "https://github.com/mpsops/candle-birefnet"
keywords = ["candle", "metal", "birefnet", "segmentation", "apple-silicon"]
categories = ["computer-vision", "science"]
readme = "README.md"

[dependencies]
candle-core = { git = "https://github.com/imperatormk/candle", branch = "main" }
candle-nn = { git = "https://github.com/imperatormk/candle", branch = "main" }
candle-metal-kernels = { git = "https://github.com/imperatormk/candle", branch = "main", optional = true }
candle-mps-flash-attention = { git = "https://github.com/mpsops/candle-mps-flash-attention", optional = true }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.27", optional = true }

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal", "candle-metal-kernels", "dep:metal"]
flash-attn = ["metal", "candle-mps-flash-attention"]

[dev-dependencies]
image = "0.25"
hf-hub = "0.3"
